--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -46,24 +46,25 @@
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
   --animate-orbit: orbit calc(var(--duration) * 1s) linear infinite;
+
   @keyframes orbit {
     0% {
-      transform: rotate(calc(var(--angle) * 1deg))
-        translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
+      transform: rotate(calc(var(--angle) * 1deg)) translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
     }
+
     100% {
-      transform: rotate(calc(var(--angle) * 1deg + 360deg))
-        translateY(calc(var(--radius) * 1px))
-        rotate(calc((var(--angle) * -1deg) - 360deg));
+      transform: rotate(calc(var(--angle) * 1deg + 360deg)) translateY(calc(var(--radius) * 1px)) rotate(calc((var(--angle) * -1deg) - 360deg));
     }
   }
 }
+
 @theme {
-  --color-primary: "#161F26";
+  --color-primary: #161F26;
   --shadow-card:
     0 0 4px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(23, 24, 26, 0.03),
     0 8px 16px rgba(23, 24, 26, 0.04);
 }
+
 .float {
   will-change: transform;
   animation:
@@ -75,6 +76,7 @@
   from {
     transform: scale(0, 0);
   }
+
   to {
     transform: scale(1, -1);
   }
@@ -96,7 +98,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: #161F26;
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -163,6 +165,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
